[package]
name = "brickingot"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
displaydoc = "0.2.5"
noak = { version = "0.6.3", git = "https://github.com/purplesyringa/noak" }
rustc-hash = "2.1.1"
thiserror = "2.0.12"

[profile.release]
debug = true

[dev-dependencies]
proptest = "1.7.0"
