cargo-features = ["panic-immediate-abort"]

[package]
name = "brickingot"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
derive-where = "1.6.0"
displaydoc = "0.2.5"
noak = { version = "0.6.3", git = "https://github.com/purplesyringa/noak" }
rustc-hash = "2.1.1"
thiserror = "2.0.12"
tikv-jemallocator = "0.6"

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.release]
debug = true
codegen-units = 1
panic = "immediate-abort"
lto = "fat"

[dev-dependencies]
proptest = "1.7.0"
